# TractionInverterV3

./: .gitmodules  InverterCom.bak  InverterCom.kicad_sym
Boards/: MouserBOM.csv  MouserBOM.py  bom_substitutions.json
Firmware/: README.md  build.sh  init.cmd  install_arduino_cli.sh
HMI/: DigitalSignalIn.kicad_sch  HMI.kicad_prl  HMI.kicad_pro  HMI.kicad_sch  PowerOutputs.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
IFD/: Build.sh  CMakeLists.txt  Main.cpp  Setup.sh  TitledValueDisplay.h  VerticalBarGauge.h
InverterCom.pretty/: 1548129.kicad_mod  1987724.kicad_mod  1SMB2EZ15_R1_00001.kicad_mod  389690002.kicad_mod  5-106505-2_3.kicad_mod  67715ABPE.kicad_mod  ACS772ECB200BPFFT.kicad_mod  ALH82A750CB600.kicad_mod  B32652__18_x_9_.kicad_mod  B32774X__31.5_x_12.5_.kicad_mod  BEADC1608X100N.kicad_mod  CAPPRD1000W190D2250H2700.kicad_mod  CAPPRD500W60D1025H1750.kicad_mod  CM600HA-24H-Gate.kicad_mod  CM600HA-24H-PWR.kicad_mod  D25S33E4PA00LF.kicad_mod  DE09PAM1.kicad_mod  DIOAD1405W86L465D235.kicad_mod  DIOM5226X220N.kicad_mod  IHDM1008BCEV2R2M20.kicad_mod  L717SDB25PA4CH3R.kicad_mod  LEDC3216X120N.kicad_mod  R78K3310.kicad_mod  REC10K-AW-24.kicad_mod  REC10K-AW.kicad_mod  RESC6431X65N.kicad_mod  RKE1205SH.kicad_mod  SIHFR120GE3.kicad_mod  SOD3716X135N.kicad_mod  SOIC127P1030X265-16N.kicad_mod  SOIC127P600X175-14N.kicad_mod  SOIC127P600X175-8N.kicad_mod  SOP50P640X120-38M.kicad_mod  SOP65P640X120-20N.kicad_mod  SOT65P210X110-5N.kicad_mod  SOT95P237X112-3N.kicad_mod  SOT95P240X88-3N.kicad_mod  Silkscreen_Char_RibbonsAlmark.kicad_mod  (+5 more)
Mechanical/: WheelHub.FCStd
(+861 files in other folders)
